[package]
name = "register"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>", "Runji Wang <wangrunji0408@163.com>", "Yuekai Jia <equation618@gmail.com>"]
edition = "2018"
description = "register"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.3"
log = "0.4"
bitflags = "1.3"
bit_field = "0.10.1"
config = {git = "https://github.com/Baozixu99/config.git"}
num_enum = { version="0.5", default-features = false }
rlibc = "1.0.0"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
panic = 'unwind'
